--- a/bookamenu.html
+++ b/bookamenu.html
@@ -61,7 +61,7 @@
                 Book Table
             </h3>
             <div class="form-wrapper">
-                <form>
+                <form name="booking form" netlify>
                     <div class="form-group">
                         <label for="firstName">First Name</label>
                         <input type="text" name="firstName" id="firstName" required>
