--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                 Contact & Enquiry
             </h3>
             <div class="form-wrapper">
-                <form name="contact form" netflify>
+                <form name="contact form" netlify>
                     <div class="form-group">
                         <label for="firstName">First Name</label>
                         <input type="text" name="firstName" id="firstName" required>
